# aura

./: Cargo.toml  README.md  l  l1
aura-python/: .gitignore  pyproject.toml
aura-python/aura/: __init__.py  config.py  main.py
aura-python/aura/agents/: __init__.py  base.py  local.py
aura-python/aura/agents/domain/: __init__.py  agent.py  prompt.py
aura-python/aura/agents/onomastic/: __init__.py  agent.py  parser.py  prompt.py
aura-python/aura/agents/vision/: __init__.py  agent.py  parser.py  prompt.py
aura-python/aura/api/: __init__.py  dto.py  handlers.py  metrics_builder.py  router.py
aura-python/aura/core/: __init__.py  fusion.py  metrics.py  models.py  types.py
aura-python/aura/data/: __init__.py  domains.py
aura-python/aura/services/: __init__.py  openai_client.py
aura-python/tests/: conftest.py
aura-python/tests/test_agents/: test_local.py
aura-python/tests/test_core/: test_fusion.py  test_types.py
src/: handler.rs  main.rs  model.rs  openai.rs  router.rs  vision.rs
src/agent/: domain.rs  handler.rs  io.rs  local.rs  metrics.rs  mod.rs  type.rs
src/agent/onomast/: mod.rs  parser.rs  prompt.rs  type.rs
src/agent/vision/: mod.rs  parser.rs  prompt.rs  type.rs
src/api/: dto.rs  fuzzy.rs  handler.rs  handler.rs.bak  infer.rs  metrics.rs  mod.rs  router.rs
src/core/: fusion.rs  metric.rs  mod.rs  signal.rs  type.rs
src/data/: domain.rs
src/legacy/: mod.rs  prompt.rs  router.rs
src/signal/: io.rs  mod.rs  type.rs
