[package]
name = "aura"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
ntex = { version = "2.17.0", features = ["tokio"] }
regex = "1.12.2"
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v4"] }
